--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-10-03  Manish Singh  <yosh@gimp.org>
+
+	* programmatic/admin/news/wgo_news.py: formatdate is also in
+	email.Utils
+
 2008-10-03  Michael Schumacher  <schumaml@cvs.gnome.org>
 
 	* programmatic/admin/news/wgo_news.py: parsedate is in email.Utils 
