--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-10-09  Sven Neumann  <sven@gimp.org>
+
+	* downloads/source.xhtml: updated for GIMP 2.6.1 release.
+
 2008-10-06  Sven Neumann  <sven@gimp.org>
 
 	* index.htrw: now that the news system is working again, remove
