--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-10-11  Sven Neumann  <sven@gimp.org>
+
+	* unix/index.htrw: applied patch from "ayucat".
+
 2008-10-11  Martin Nordholts  <martinn@svn.gnome.org>
 
 	* downloads/Windows.xhtml: updated link to 2.6.1 installer.
