--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-10-12  Sven Neumann  <sven@gimp.org>
+
+	* mail_lists.htrw: applied patch from Richard H.
+
 2008-10-11  Sven Neumann  <sven@gimp.org>
 
 	* unix/index.htrw: applied patch from "ayucat".
