save before you commit
svn path=/trunk/; revision=1899

--- a/ChangeLog
+++ b/ChangeLog
@@ -3,7 +3,8 @@
 	* downloads/Mac.xhtml: point to the GIMP 2.6 packages for Mac OS X
 	at lisanet.de.
 
-	* macintosh/index.htrw: updated and remoted outdated links.
+	* macintosh/index.htrw: updated some links and remoted outdated
+	links.
 
 2008-10-12  Sven Neumann  <sven@gimp.org>
 
