--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-10-23  Sven Neumann  <sven@gimp.org>
+
+	* mail_lists.htrw: spelling fixes.
+
 2008-10-18  Sven Neumann  <sven@gimp.org>
 
 	* downloads/Mac.xhtml: point to the GIMP 2.6 packages for Mac OS X
