--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-10-30  Sven Neumann  <sven@gimp.org>
+
+	* downloads/source.xhtml: updated for GIMP 2.6.2 release.
+
 2008-10-23  Sven Neumann  <sven@gimp.org>
 
 	* mail_lists.htrw: spelling fixes.
