--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2008-11-07  Martin Nordholts  <martinn@svn.gnome.org>
 
+	* bugs/index.htrw (Bugs, bugs, bugs!): Rewritten to provide more
+	helpful information right away, and to contain a note regarding
+	enhancement requests and that they should be discussed on the
+	gimp-developer mailing list before being filed.
+
+2008-11-07  Martin Nordholts  <martinn@svn.gnome.org>
+
 	Applied patch from Richard Hirner.
 
 	* includes/wgo-page-init.xhtml: Removed GUG link.
