--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-11-22  Martin Nordholts  <martinn@svn.gnome.org>
+
+	* webmasters.htrw (Last resort): Remove confusing reference to the
+	bug tracker.
+
 2008-11-21  Sven Neumann  <sven@gimp.org>
 
 	* downloads/source.xhtml: updated for GIMP 2.6.3 release.
