--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2009-01-01  Sven Neumann  <sven@gimp.org>
+
+	* downloads/source.xhtml: updated for GIMP 2.6.4 release.
+
 2008-11-23  Sven Neumann  <sven@gimp.org>
 
 	* downloads/Windows.xhtml: updated link to 2.6.3 installer.
