--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2009-01-01  Sven Neumann  <sven@gimp.org>
 
+	* includes/wgo-page-fini.xhtml: Happy New Year!
+
+2009-01-01  Sven Neumann  <sven@gimp.org>
+
 	* downloads/source.xhtml: updated for GIMP 2.6.4 release.
 
 2008-11-23  Sven Neumann  <sven@gimp.org>
