updated link to 2.6.4 installer.
2009-01-02  Sven Neumann  <sven@gimp.org>

	* downloads/Windows.xhtml: updated link to 2.6.4 installer.


svn path=/trunk/; revision=1913

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2009-01-02  Sven Neumann  <sven@gimp.org>
+
+	* downloads/Windows.xhtml: updated link to 2.6.4 installer.
+
 2009-01-01  Sven Neumann  <sven@gimp.org>
 
 	* includes/wgo-page-fini.xhtml: Happy New Year!
