--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+2009-01-14  Michael Schumacher  <schumaml@cvs.gnome.org>
+
+	* books/index.htrw: added an invisible template for new book
+	entries to the beginning. 
+	Added books "GIMP for Textile Design" and "Beginning GIMP, Second
+	Edition". 
+
+	* books/gimp_for_textile_design.png: new file
+	* books/beginning_gimp_from_novice_to_professional_second_edition.png: 
+	new file
+	
 2009-01-12  Michael Schumacher  <schumaml@cvs.gnome.org>
 
 	* release-notes/gimp-2.6.htrw: fix typo.
