--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2009-02-28  Jakub Steiner <jimmac@ximian.com>
+
+	* style/opera.css(r):
+	* includes/wgo.js: remove special casing of opera. not needed
+		anymore
+
 2009-02-27  Jakub Steiner <jimmac@ximian.com>
 
 	* style/wgo.css: fixed px width for the menu due to the splash
