--- a/ChangeLog
+++ b/ChangeLog
@@ -6,7 +6,7 @@
 
 	* style/opera.css(r):
 	* includes/wgo.js: remove special casing of opera. not needed
-		anymore
+	anymore
 
 2009-02-27  Jakub Steiner <jimmac@ximian.com>
 
@@ -15,28 +15,30 @@
 2009-02-27  Jakub Steiner <jimmac@ximian.com>
 
 	* about/splash/stable.html
-	*	includes/fancybox/fancy.css
-	*	includes/fancybox/fancy_closebox.png
-	*	includes/fancybox/fancy_left.gif
-	*	includes/fancybox/fancy_progress.png
-	*	includes/fancybox/fancy_right.gif
-	*	includes/fancybox/fancy_shadow_e.png
-	*	includes/fancybox/fancy_shadow_n.png
-	*	includes/fancybox/fancy_shadow_ne.png
-	*	includes/fancybox/fancy_shadow_nw.png
-	*	includes/fancybox/fancy_shadow_s.png
-	*	includes/fancybox/fancy_shadow_se.png
-	*	includes/fancybox/fancy_shadow_sw.png
-	*	includes/fancybox/fancy_shadow_w.png
-	*	includes/fancybox/fancy_title_left.png
-	*	includes/fancybox/fancy_title_main.png
-	*	includes/fancybox/fancy_title_right.png
-	*	includes/fancybox/jquery.fancybox.js
-	*	includes/fancybox/jquery.pngFix.pack.js
-	*	includes/imagebox.js(r)
-	*	includes/imagebox.xhtml
-	*	includes/iutil.js(r)
-	*	includes/jquery.js(r): use jquery 1.3.2 offsite. Replace imagebox  with fancybox that has better cross browser support and scales images based on viewport size.
+	* includes/fancybox/fancy.css
+	* includes/fancybox/fancy_closebox.png
+	* includes/fancybox/fancy_left.gif
+	* includes/fancybox/fancy_progress.png
+	* includes/fancybox/fancy_right.gif
+	* includes/fancybox/fancy_shadow_e.png
+	* includes/fancybox/fancy_shadow_n.png
+	* includes/fancybox/fancy_shadow_ne.png
+	* includes/fancybox/fancy_shadow_nw.png
+	* includes/fancybox/fancy_shadow_s.png
+	* includes/fancybox/fancy_shadow_se.png
+	* includes/fancybox/fancy_shadow_sw.png
+	* includes/fancybox/fancy_shadow_w.png
+	* includes/fancybox/fancy_title_left.png
+	* includes/fancybox/fancy_title_main.png
+	* includes/fancybox/fancy_title_right.png
+	* includes/fancybox/jquery.fancybox.js
+	* includes/fancybox/jquery.pngFix.pack.js
+	* includes/imagebox.js(r)
+	* includes/imagebox.xhtml
+	* includes/iutil.js(r)
+	* includes/jquery.js(r): use jquery 1.3.2 offsite. Replace
+	imagebox with fancybox that has better cross browser support and
+	scales images based on viewport size.
 
 2009-02-27  Jakub Steiner <jimmac@ximian.com>
 
