--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2009-03-21  Martin Nordholts  <martinn@svn.gnome.org>
+
+	* downloads/Windows.xhtml: Updated link to 2.6.6 installer.
+
 2009-03-16  Sven Neumann  <sven@gimp.org>
 
 	* downloads/source.xhtml: updated for GIMP 2.6.6 release.
